# ton_validation_contest

./: .gitignore  .gitmodules  CMakeLists.txt
contest/grader/: CMakeLists.txt  grader.cpp
contest/solution/: CMakeLists.txt  contest-validate-query.cpp  contest-validate-query.hpp  solution.cpp  solution.hpp
crypto/: CMakeLists.txt  Ed25519.cpp  Ed25519.h
crypto/block/: block-auto.cpp  block-auto.h  block-parse.cpp  block-parse.h  block.cpp  block.h  mc-config.cpp  mc-config.h  output-queue-merger.cpp  output-queue-merger.h
crypto/block/precompiled-smc/: PrecompiledSmartContract.cpp  PrecompiledSmartContract.h
crypto/common/: AtomicRef.h  bigexp.cpp  bigexp.h  bigint.hpp  bitstring.cpp  bitstring.h  promiseop.hpp  refcnt.cpp  refcnt.hpp  refint.cpp  refint.h  util.cpp  util.h
crypto/ellcurve/: Ed25519.cpp  Ed25519.h  Fp25519.cpp  Fp25519.h  Montgomery.cpp  Montgomery.h  TwEdwards.cpp  TwEdwards.h  p256.cpp  p256.h  secp256k1.cpp
crypto/keccak/: keccak.cpp
crypto/openssl/: bignum.cpp  bignum.h  digest.h  digest.hpp  rand.cpp  rand.hpp  residue.cpp  residue.h
crypto/parser/: lexer.cpp  lexer.h  srcread.cpp  srcread.h  symtable.cpp  symtable.h
crypto/tl/: tlbc-aux.h  tlbc.cpp  tlblib.cpp  tlblib.hpp
crypto/vm/: Hasher.cpp  Hasher.h  arithops.cpp  atom.cpp  atom.h  bls.cpp  bls.h  boc-writers.h  boc.cpp  boc.h  cellops.cpp  cellops.h  continuation.cpp  continuation.h  contops.cpp  cp0.cpp  debugops.cpp  dict.cpp  dict.h  dictops.cpp  dispatch.cpp  excno.hpp  log.h  memo.cpp  memo.h  opctable.cpp  opctable.h  stack.cpp  stack.hpp  stackops.cpp  tonops.cpp  tonops.h  tupleops.cpp  utils.cpp  utils.h  vmstate.h
crypto/vm/cells/: Cell.cpp  Cell.h  CellBuilder.cpp  CellBuilder.h  CellHash.cpp  CellHash.h  CellSlice.cpp  CellSlice.h  CellString.cpp  CellString.h  CellTraits.cpp  CellTraits.h  CellUsageTree.cpp  CellUsageTree.h  DataCell.cpp  DataCell.h  ExtCell.h  LevelMask.cpp  LevelMask.h  MerkleProof.cpp  MerkleProof.h  MerkleUpdate.cpp  MerkleUpdate.h  VirtualizationParameters.h
crypto/vm/db/: BlobView.cpp  BlobView.h  CellHashTable.h  CellStorage.cpp  CellStorage.h  DynamicBagOfCellsDb.cpp  DynamicBagOfCellsDb.h  StaticBagOfCellsDb.cpp  StaticBagOfCellsDb.h
td/: CMakeLists.txt
td/actor/: ActorId.h  ActorOwn.h  ActorShared.h  ActorStats.cpp  ActorStats.h  MultiPromise.cpp  MultiPromise.h  PromiseFuture.h  actor.h  common.h
td/actor/core/: Actor.h  ActorExecuteContext.h  ActorExecutor.cpp  ActorExecutor.h  ActorInfo.h  ActorInfoCreator.h  ActorLocker.h  ActorMailbox.h  ActorMessage.h  ActorSignals.h  ActorState.h  ActorTypeStat.cpp  ActorTypeStat.h  Context.h  CpuWorker.cpp  CpuWorker.h  IoWorker.cpp  IoWorker.h  Scheduler.cpp  Scheduler.h  SchedulerContext.h  SchedulerId.h  SchedulerMessage.h
td/db/: BlobView.cpp  BlobView.h  KeyValue.h
td/pg/: tl_object_parse.h  tl_object_store.h  ton_api.cpp  ton_api.h  ton_api.hpp
td/utils/: AtomicRead.h  BigNum.cpp  BigNum.h  Closure.h  ConcurrentHashTable.h  Container.h  Context.h  Destructor.h  Hash.h  HashMap.h  HashSet.h  HazardPointers.h  Heap.h  List.h  MpmcQueue.cpp  MpmcQueue.h  MpmcWaiter.h  MpscLinkQueue.h  MpscPollableQueue.h  Named.h  ObjectPool.h  Observer.h  OptionParser.cpp  OptionParser.h  OptionsParser.cpp  OptionsParser.h  Parser.h  PathView.cpp  PathView.h  Random.cpp  Random.h  ScopeGuard.h  SharedObjectPool.h  SharedSlice.cpp  SharedSlice.h  Slice-decl.h  Slice.cpp  Slice.h  Span.h  SpinLock.h  (+49 more)
td/utils/port/: Clocks.cpp  Clocks.h  CxCli.h  EventFd.h  EventFdBase.h  FileFd.cpp  FileFd.h  IPAddress.cpp  IPAddress.h  IoSlice.h  MemoryMapping.cpp  MemoryMapping.h  Poll.h  PollBase.h  PollFlags.cpp  PollFlags.h  RwMutex.h  SocketFd.cpp  SocketFd.h  Stat.cpp  Stat.h  StdStreams.cpp  StdStreams.h  config.h  path.cpp  path.h  rlimit.cpp  rlimit.h  signals.cpp  signals.h  sleep.cpp  sleep.h  thread.h  thread_local.cpp  thread_local.h  uname.cpp  uname.h  user.cpp  user.h  wstring_convert.cpp  (+1 more)
td/utils/port/detail/: Epoll.cpp  Epoll.h  EventFdBsd.cpp  EventFdBsd.h  EventFdLinux.cpp  EventFdLinux.h  EventFdWindows.cpp  EventFdWindows.h  Iocp.cpp  Iocp.h  KQueue.cpp  KQueue.h  NativeFd.cpp  NativeFd.h  Poll.cpp  Poll.h  PollableFd.h  Select.cpp  Select.h  ThreadIdGuard.cpp  ThreadIdGuard.h  ThreadPthread.cpp  ThreadPthread.h  ThreadStl.h  WineventPoll.cpp  WineventPoll.h
ton/: ton-shard.h  ton-tl.hpp  ton-types.h
validator/: CMakeLists.txt
validator/impl/: message-queue.hpp  shard.cpp  shard.hpp
validator/interfaces/: shard.h
